--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,19 @@
 sudo: false
 language: ruby
+
 rvm:
-  - 2.6.0
-before_install: gem install bundler -v 1.16.2
+  - 2.5.1
+  - ruby-head
+
+before_install:
+  - gem update --system
+  - gem install bundler
+
+cache: bundler
+
+matrix:
+  allow_failures:
+    - rvm: ruby-head
+
+notifications:
+  email: false
